--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,18 +7,18 @@ main:
   - name: Tour
     url: tour
     weight: 10
-  - name: News
+  - name: Aktuelles
     url: post
     weight: 20
-  - name: People
+  - name: Team
     url: people
     weight: 30
-  - name: Events
+  - name: Veranstaltungen
     url: event
     weight: 40
   #- name: Publications
   #  url: publication
   #  weight: 50
-  - name: Contact
+  - name: Kontakt
     url: contact
     weight: 60
